[project]
name = "agdldm"
version = "0.1.0"
description = "AGD-LDM: Identifying Abnormally Expressed Genes Using Latent Diffusion Models"
authors = [
    {name = "woozch",email = "herorise27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers[torch] (>=4.55.0,<5.0.0)",
    "diffusers[torch] (>=0.34.0,<0.35.0)",
    "evaluate (>=0.4.5,<0.5.0)",
    "tokenizers (>=0.21.4,<0.22.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "accelerate (>=1.9.0,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "dask[complete] (>=2025.7.0,<2026.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "peft (>=0.17.0,<0.18.0)",
    "torch-tb-profiler (>=0.4.3,<0.5.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
