[project]
name = "agdldm"
version = "0.1.0"
description = "AGD-LDM: Identifying Abnormally Expressed Genes Using Latent Diffusion Models"
authors = [
    {name = "woozch",email = "herorise27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers[torch] (>=4.55.2,<5.0.0)",
    "diffusers[torch] (>=0.35.0,<0.36.0)",
    "evaluate (>=0.4.5,<0.5.0)",
    "tokenizers (>=0.21.4,<0.22.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "accelerate (>=1.10.0,<2.0.0)",
    "peft (>=0.17.0,<0.18.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
